icons and imgs added spacing is being fixed

--- a/client/style.css
+++ b/client/style.css
@@ -23,16 +23,23 @@ body{
   display: flex;
   background-color: #ECECEC;
   height: 50%;
+
 }
 
 .main-left{
-  height:100%;
   width: 50%;
 }
 
 .main-right{
-  height:100%;
+  display: flex;
+
+  flex-direction: column;
   width: 50%;
+}
+
+.icons-genres{
+  display: flex;
+  justify-content: space-between;
 }
 
 .parent-slider{
